fix: Russian titles being too large

--- a/assets/styles/src/blocks/_cards.scss
+++ b/assets/styles/src/blocks/_cards.scss
@@ -273,10 +273,18 @@
     & > *:nth-child(2) {
         font-size: var(--font-size-3xl);
         --stack-spacing: var(--spacing-xs);
+
+        [lang="ru-RU"] & {
+            font-family: var(--font-family-cyrillic);
+        }
     }
 
     & > *:nth-child(3) {
         font-size: var(--font-size-lg);
+
+        [lang="ru-RU"] & {
+            font-family: var(--font-family-cyrillic);
+        }
     }
 
     p {
